--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 
-<body>
+<body class="page">
     <header class="header">
         <div class="top-actions header__top-actions">
             <div class="nav-actions">
