--- a/index.html
+++ b/index.html
@@ -358,83 +358,85 @@
     <hr class="main__line">
 
     <footer class="footer">
-        <div class="rubric__footer rubric__footer_logo">
-            <a href="#" class="logo logo_footer">
-                <img
-                    src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
-                    class="logo__image logo__image_footer"
-                    alt="Foundation"
-                />
-
-                <label class="logo__label logo__label_footer">
-                    <span class="logo__heading logo__heading_footer">
-                        Foundation
-                    </span>
-
-                    <span class="logo__write-up logo__write-up_footer">
-                        Startup landing template
-                    </span>
-                </label>
-            </a>
-
-            <p class="rubric__indent rubric__indent_footer">
-                Foundation is a website template for startups and small teams. It helps
-                to build a website in no time.
-            </p>
-
-            <div class="rubric__gallery rubric__gallery_footer">
-                <div class="rubric__picture rubric__picture_footer">
+        <div class="footer__content">  
+            <div class="rubric__footer rubric__footer_logo">
+                <a href="#" class="logo logo_footer">
                     <img
-                        class="rubric__image rubric__image_store"
-                        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
-                        alt="app-store"
+                        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/icon-dark.png"
+                        class="logo__image logo__image_footer"
+                        alt="Foundation"
                     />
-                </div>
-                
-                <div class="rubric__picture rubric__picture_footer">
-                    <img
-                        class="rubric__image rubric__image_play"
-                        src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
-                        alt="google-play"
-                    />
+
+                    <label class="logo__label logo__label_footer">
+                        <span class="logo__heading logo__heading_footer">
+                            Foundation
+                        </span>
+
+                        <span class="logo__write-up logo__write-up_footer">
+                            Startup landing template
+                        </span>
+                    </label>
+                </a>
+
+                <p class="rubric__indent rubric__indent_footer">
+                    Foundation is a website template for startups and small teams. It helps
+                    to build a website in no time.
+                </p>
+
+                <div class="rubric__gallery rubric__gallery_footer">
+                    <div class="rubric__picture rubric__picture_footer">
+                        <img
+                            class="rubric__image rubric__image_store"
+                            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/app-store.png"
+                            alt="app-store"
+                        />
+                    </div>
+                    
+                    <div class="rubric__picture rubric__picture_footer">
+                        <img
+                            class="rubric__image rubric__image_play"
+                            src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/google-play.png"
+                            alt="google-play"
+                        />
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="rubric__footer rubric__footer_product">
-            <h3 class="rubric__heading rubric__heading_footer">Product</h3>
-            <p class="rubric__comment rubric__comment_footer">Acquire Users</p>
-            <p class="rubric__comment rubric__comment_footer">Content Marketing</p>
-            <p class="rubric__comment rubric__comment_footer">Website Templates</p>
-            <p class="rubric__comment rubric__comment_footer">Customer Management</p>
-            <p class="rubric__comment rubric__comment_footer">Virtual Inbox</p>
-        </div>
-
-        <div class="rubric__footer rubric__footer_company">
-            <h3 class="rubric__heading rubric__heading_footer">Company</h3>
-            <p class="rubric__comment rubric__comment_footer">About Foundation</p>
-            <p class="rubric__comment rubric__comment_footer">Brand Guidelines</p>
-            <p class="rubric__comment rubric__comment_footer">Press Kit</p>
-            <p class="rubric__comment rubric__comment_footer">Support</p>
-        </div>
-
-        <div class="rubric__footer rubric__info">
-            <div class="rubric__comment rubric__info_legal">
-                <p class="rubric__comment rubric__comment_legal">Terms</p>
-                <p class="rubric__comment rubric__comment_legal">Privacy</p>
-                <p class="rubric__comment rubric__comment_legal">License</p>
+            <div class="rubric__footer rubric__footer_product">
+                <h3 class="rubric__heading rubric__heading_footer">Product</h3>
+                <p class="rubric__comment rubric__comment_footer">Acquire Users</p>
+                <p class="rubric__comment rubric__comment_footer">Content Marketing</p>
+                <p class="rubric__comment rubric__comment_footer">Website Templates</p>
+                <p class="rubric__comment rubric__comment_footer">Customer Management</p>
+                <p class="rubric__comment rubric__comment_footer">Virtual Inbox</p>
             </div>
 
-            <div class="rubric__gallery rubric__gallery_media">
-                <div class="rubric__icon">
-                    <a href="#" class="icon icon_tw"></a>
+            <div class="rubric__footer rubric__footer_company">
+                <h3 class="rubric__heading rubric__heading_footer">Company</h3>
+                <p class="rubric__comment rubric__comment_footer">About Foundation</p>
+                <p class="rubric__comment rubric__comment_footer">Brand Guidelines</p>
+                <p class="rubric__comment rubric__comment_footer">Press Kit</p>
+                <p class="rubric__comment rubric__comment_footer">Support</p>
+            </div>
+
+            <div class="rubric__footer rubric__info">
+                <div class="rubric__comment rubric__info_legal">
+                    <p class="rubric__comment rubric__comment_legal">Terms</p>
+                    <p class="rubric__comment rubric__comment_legal">Privacy</p>
+                    <p class="rubric__comment rubric__comment_legal">License</p>
                 </div>
 
-                <div class="rubric__icon">
-                    <a href="#" class="icon icon_fb"></a>
-                </div>
+                <div class="rubric__gallery rubric__gallery_media">
+                    <div class="rubric__icon">
+                        <a href="#" class="icon icon_tw"></a>
+                    </div>
 
-                <div class="rubric__icon">
-                    <a href="#" class="icon icon_in"></a>
+                    <div class="rubric__icon">
+                        <a href="#" class="icon icon_fb"></a>
+                    </div>
+
+                    <div class="rubric__icon">
+                        <a href="#" class="icon icon_in"></a>
+                    </div>
                 </div>
             </div>
         </div>
