--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
           <div class="picture header__picture"></div>
           <h1 class="title header__title">Build stunning websites & apps.</h1>
           <div class="motto header__motto">
-            Create live segments and target the right people for messages based
-            on their behaviors.
+            Create live segments and target the right people for messages based on their behaviors.
 
             <div class="header__actions">
               <button class="button button_blue">Get Started</button>
@@ -93,16 +92,14 @@
           <article class="rubric rubric_isIt">
             <h3 class="heading heading_isIt">What is it about?</h3>
             <p class="indent indent_isIt">
-              Building a website for a startup that looks amazing is not a
-              rocket science anymore.
+              Building a website for a startup that looks amazing is not a rocket science anymore.
             </p>
           </article>
           <article class="rubric rubric_isIt">
             <h3 class="heading heading_isIt">Who is it for?</h3>
 
             <p class="indent indent_isIt">
-              Startups, small companies and teams, entrepreneurs and web
-              developers.
+              Startups, small companies and teams, entrepreneurs and web developers.
             </p>
           </article>
         </div>
@@ -163,8 +160,7 @@
             <h3 class="heading heading_audience">Engage Visitors</h3>
             <h2 class="name name_audience">Understand your audience</h2>
             <p class="indent indent_audience">
-              Early stage company? Eligible applicants get all of our products
-              for just $49 a month.
+              Early stage company? Eligible applicants get all of our products for just $49 a month.
             </p>
             <div class="actions_audience">
               <button class="button button_blue">Get Started</button>
@@ -179,17 +175,13 @@
                 />
                 <span class="description">Developers</span>
               </div>
-              <div
-                class="illustration illustration_audience illustration_audience_selected"
-              >
+              <div class="illustration illustration_audience">
                 <img
                   class="image image_entertainment"
                   src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson24/hw1/user-2.png"
                   alt="entertainment"
                 />
-                <span class="description description_selected"
-                  >Entertainment</span
-                >
+                <span class="description">Entertainment</span>
               </div>
               <div class="illustration illustration_audience">
                 <img
@@ -275,18 +267,11 @@
           <article class="rubric rubric_order">
             <h2 class="name name_order">Start your free trial.</h2>
             <p class="indent indent_order">
-              Get notified about company updates, news and blog posts. We hate
-              spam.
+              Get notified about company updates, news and blog posts. We hate spam.
             </p>
             <form action="#" method="post" class="actions actions_order">
-              <input
-                type="text"
-                class="button button_white"
-                placeholder="Enter your email"
-              />
-              <button type="submit" class="button button_blue">
-                Get Started
-              </button>
+              <input type="text" class="button button_white" placeholder="Enter your email" />
+              <button type="submit" class="button button_blue">Get Started</button>
             </form>
             <p class="comment comment_order">
               Free 14-day trial · Easy setup · Cancel any time. Check out
@@ -308,17 +293,13 @@
               alt="Foundation"
             />
             <label class="logo__label logo__label_footer">
-              <span class="logo__heading logo__heading_footer">
-                Foundation
-              </span>
-              <span class="logo__write-up logo__write-up_footer">
-                Startup landing template
-              </span>
+              <span class="logo__heading logo__heading_footer"> Foundation </span>
+              <span class="logo__write-up logo__write-up_footer"> Startup landing template </span>
             </label>
           </a>
           <p class="indent indent_footer">
-            Foundation is a website template for startups and small teams. It
-            helps to build a website in no time.
+            Foundation is a website template for startups and small teams. It helps to build a
+            website in no time.
           </p>
           <div class="gallery gallery_footer">
             <div class="illustration illustration_footer">
